Probando de solucionar el bug (del btn dark Mode-Light)

--- a/src/App.css
+++ b/src/App.css
@@ -82,7 +82,7 @@
 
 .light {
   font-weight: bold;
-  margin-top: 30px;
+ 
   background-image: url("https://img.freepik.com/vector-premium/icono-montanas-azules_118813-6945.jpg?w=1060");
   background-size: cover;
   color: rgb(250, 250, 248);
